modules/ve-mw/init/styles/ve.init.mw.DesktopArticleTarget.css
/*!
 * VisualEditor MediaWiki Initialization DesktopArticleTarget styles.
 *
 * @copyright 2011-2016 VisualEditor Team and others; see AUTHORS.txt
 * @license The MIT License (MIT); see LICENSE.txt
 */

/* Toolbar */

.ve-activating .ve-init-mw-desktopArticleTarget-toolbar,
.ve-deactivating .ve-init-mw-desktopArticleTarget-toolbar {
	overflow: hidden;
	transition: height 0.4s ease; /* stylelint-disable-line no-unsupported-browser-features */
}

.ve-ui-toolbar-floating .oo-ui-toolbar-bar {
	transform: translateY( -100% );
	transition: transform 0.4s ease; /* stylelint-disable-line no-unsupported-browser-features */
}

.ve-active .ve-ui-toolbar-floating .oo-ui-toolbar-bar {
	transform: translateY( 0 );
}

/*!
 * ve-redirect-header is added just outside of the surface, which has its own
 * hiding style during activation.
 */
.ve-activating .ve-redirect-header {
	height: 0;
	overflow: hidden;
}

.ve-init-mw-desktopArticleTarget .ve-redirect-header {
	cursor: pointer;
}

.ve-init-mw-desktopArticleTarget .redirectMsg a:hover {
	text-decoration: none;
}

/*!
 * Increase z-index of surface container so it appears above the debug bar
 */
.ve-init-mw-desktopArticleTarget #bodyContent { /* stylelint-disable-line selector-no-id */
	z-index: 1;
}

